build/st_parser.output
Terminals unused in grammar

    TOKEN_REPEAT
    TOKEN_UNTIL
    TOKEN_END_REPEAT
    TOKEN_EXIT
    TOKEN_DOT
    TOKEN_ERROR


State 54 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TOKEN_PROGRAM TOKEN_IDENTIFIER import_list var_decl_list function_list statement_list TOKEN_END_PROGRAM

    2 import_list: ε
    3            | import_list import_decl

    4 import_decl: TOKEN_IMPORT TOKEN_STRING_LITERAL TOKEN_SEMICOLON
    5            | TOKEN_IMPORT TOKEN_STRING_LITERAL TOKEN_AS TOKEN_IDENTIFIER TOKEN_SEMICOLON

    6 var_decl_list: ε
    7              | var_decl_list var_decl

    8 var_decl: TOKEN_VAR var_decl_item TOKEN_END_VAR
    9         | TOKEN_VAR_INPUT var_decl_item TOKEN_END_VAR
   10         | TOKEN_VAR_OUTPUT var_decl_item TOKEN_END_VAR

   11 var_decl_item: TOKEN_IDENTIFIER TOKEN_COLON type_spec TOKEN_SEMICOLON
   12              | TOKEN_IDENTIFIER TOKEN_COLON type_spec TOKEN_ASSIGN expression TOKEN_SEMICOLON
   13              | var_decl_item TOKEN_IDENTIFIER TOKEN_COLON type_spec TOKEN_SEMICOLON
   14              | var_decl_item TOKEN_IDENTIFIER TOKEN_COLON type_spec TOKEN_ASSIGN expression TOKEN_SEMICOLON

   15 type_spec: TOKEN_BOOL
   16          | TOKEN_INT
   17          | TOKEN_REAL
   18          | TOKEN_STRING
   19          | TOKEN_ARRAY TOKEN_LBRACKET TOKEN_INTEGER_LITERAL TOKEN_RANGE TOKEN_INTEGER_LITERAL TOKEN_RBRACKET TOKEN_OF type_spec

   20 function_list: ε
   21              | function_list function_decl

   22 function_decl: TOKEN_FUNCTION TOKEN_IDENTIFIER var_decl_list TOKEN_COLON type_spec var_decl_list statement_list TOKEN_END_FUNCTION
   23              | TOKEN_FUNCTION TOKEN_IDENTIFIER var_decl_list var_decl_list statement_list TOKEN_END_FUNCTION

   24 statement_list: ε
   25               | statement_list statement

   26 statement: assignment_stmt
   27          | if_stmt
   28          | while_stmt
   29          | for_stmt
   30          | case_stmt
   31          | return_stmt
   32          | TOKEN_SEMICOLON

   33 assignment_stmt: TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_SEMICOLON
   34                | TOKEN_IDENTIFIER TOKEN_LBRACKET expression TOKEN_RBRACKET TOKEN_ASSIGN expression TOKEN_SEMICOLON

   35 if_stmt: TOKEN_IF expression TOKEN_THEN statement_list TOKEN_END_IF
   36        | TOKEN_IF expression TOKEN_THEN statement_list TOKEN_ELSE statement_list TOKEN_END_IF
   37        | TOKEN_IF expression TOKEN_THEN statement_list elsif_list TOKEN_END_IF
   38        | TOKEN_IF expression TOKEN_THEN statement_list elsif_list TOKEN_ELSE statement_list TOKEN_END_IF

   39 elsif_list: TOKEN_ELSIF expression TOKEN_THEN statement_list
   40           | elsif_list TOKEN_ELSIF expression TOKEN_THEN statement_list

   41 while_stmt: TOKEN_WHILE expression TOKEN_DO statement_list TOKEN_END_WHILE

   42 for_stmt: TOKEN_FOR TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_TO expression TOKEN_DO statement_list TOKEN_END_FOR
   43         | TOKEN_FOR TOKEN_IDENTIFIER TOKEN_ASSIGN expression TOKEN_TO expression TOKEN_BY expression TOKEN_DO statement_list TOKEN_END_FOR

   44 case_stmt: TOKEN_CASE expression TOKEN_OF statement_list TOKEN_END_CASE

   45 return_stmt: TOKEN_RETURN TOKEN_SEMICOLON
   46            | TOKEN_RETURN expression TOKEN_SEMICOLON

   47 expression: or_expr

   48 or_expr: xor_expr
   49        | or_expr TOKEN_OR xor_expr

   50 xor_expr: and_expr
   51         | xor_expr TOKEN_XOR and_expr

   52 and_expr: comparison_expr
   53         | and_expr TOKEN_AND comparison_expr

   54 comparison_expr: add_expr
   55                | comparison_expr TOKEN_EQ add_expr
   56                | comparison_expr TOKEN_NE add_expr
   57                | comparison_expr TOKEN_LT add_expr
   58                | comparison_expr TOKEN_LE add_expr
   59                | comparison_expr TOKEN_GT add_expr
   60                | comparison_expr TOKEN_GE add_expr

   61 add_expr: mult_expr
   62         | add_expr TOKEN_PLUS mult_expr
   63         | add_expr TOKEN_MINUS mult_expr

   64 mult_expr: unary_expr
   65          | mult_expr TOKEN_MULTIPLY unary_expr
   66          | mult_expr TOKEN_DIVIDE unary_expr
   67          | mult_expr TOKEN_MOD unary_expr

   68 unary_expr: primary_expr
   69           | TOKEN_NOT unary_expr
   70           | TOKEN_MINUS unary_expr

   71 primary_expr: TOKEN_INTEGER_LITERAL
   72             | TOKEN_REAL_LITERAL
   73             | TOKEN_TRUE
   74             | TOKEN_FALSE
   75             | TOKEN_STRING_LITERAL
   76             | TOKEN_IDENTIFIER
   77             | TOKEN_IDENTIFIER TOKEN_LPAREN argument_list TOKEN_RPAREN
   78             | TOKEN_IDENTIFIER TOKEN_LPAREN TOKEN_RPAREN
   79             | TOKEN_IDENTIFIER TOKEN_LBRACKET expression TOKEN_RBRACKET
   80             | TOKEN_LPAREN expression TOKEN_RPAREN

   81 argument_list: expression
   82              | argument_list TOKEN_COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_PROGRAM (258) 1
    TOKEN_END_PROGRAM (259) 1
    TOKEN_FUNCTION (260) 22 23
    TOKEN_END_FUNCTION (261) 22 23
    TOKEN_VAR (262) 8
    TOKEN_VAR_INPUT (263) 9
    TOKEN_VAR_OUTPUT (264) 10
    TOKEN_END_VAR (265) 8 9 10
    TOKEN_IF (266) 35 36 37 38
    TOKEN_THEN (267) 35 36 37 38 39 40
    TOKEN_ELSIF (268) 39 40
    TOKEN_ELSE (269) 36 38
    TOKEN_END_IF (270) 35 36 37 38
    TOKEN_CASE (271) 44
    TOKEN_OF (272) 19 44
    TOKEN_END_CASE (273) 44
    TOKEN_FOR (274) 42 43
    TOKEN_TO (275) 42 43
    TOKEN_BY (276) 43
    TOKEN_DO (277) 41 42 43
    TOKEN_END_FOR (278) 42 43
    TOKEN_WHILE (279) 41
    TOKEN_END_WHILE (280) 41
    TOKEN_REPEAT (281)
    TOKEN_UNTIL (282)
    TOKEN_END_REPEAT (283)
    TOKEN_RETURN (284) 45 46
    TOKEN_EXIT (285)
    TOKEN_IMPORT (286) 4 5
    TOKEN_AS (287) 5
    TOKEN_BOOL (288) 15
    TOKEN_INT (289) 16
    TOKEN_REAL (290) 17
    TOKEN_STRING (291) 18
    TOKEN_ARRAY (292) 19
    TOKEN_TRUE <bool_value> (293) 73
    TOKEN_FALSE <bool_value> (294) 74
    TOKEN_INTEGER_LITERAL <int_value> (295) 19 71
    TOKEN_REAL_LITERAL <real_value> (296) 72
    TOKEN_STRING_LITERAL <string_value> (297) 4 5 75
    TOKEN_IDENTIFIER <string_value> (298) 1 5 11 12 13 14 22 23 33 34 42 43 76 77 78 79
    TOKEN_ASSIGN (299) 12 14 33 34 42 43
    TOKEN_EQ (300) 55
    TOKEN_NE (301) 56
    TOKEN_LT (302) 57
    TOKEN_LE (303) 58
    TOKEN_GT (304) 59
    TOKEN_GE (305) 60
    TOKEN_PLUS (306) 62
    TOKEN_MINUS (307) 63 70
    TOKEN_MULTIPLY (308) 65
    TOKEN_DIVIDE (309) 66
    TOKEN_MOD (310) 67
    TOKEN_AND (311) 53
    TOKEN_OR (312) 49
    TOKEN_XOR (313) 51
    TOKEN_NOT (314) 69
    TOKEN_SEMICOLON (315) 4 5 11 12 13 14 32 33 34 45 46
    TOKEN_COLON (316) 11 12 13 14 22
    TOKEN_COMMA (317) 82
    TOKEN_DOT (318)
    TOKEN_RANGE (319) 19
    TOKEN_LPAREN (320) 77 78 80
    TOKEN_RPAREN (321) 77 78 80
    TOKEN_LBRACKET (322) 19 34 79
    TOKEN_RBRACKET (323) 19 34 79
    TOKEN_ERROR (324)
    UNARY_MINUS (325)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    program <ast_node> (72)
        on left: 1
        on right: 0
    import_list <ast_node> (73)
        on left: 2 3
        on right: 1 3
    import_decl <ast_node> (74)
        on left: 4 5
        on right: 3
    var_decl_list <ast_node> (75)
        on left: 6 7
        on right: 1 7 22 23
    var_decl <ast_node> (76)
        on left: 8 9 10
        on right: 7
    var_decl_item <ast_node> (77)
        on left: 11 12 13 14
        on right: 8 9 10 13 14
    type_spec <type_info> (78)
        on left: 15 16 17 18 19
        on right: 11 12 13 14 19 22
    function_list <ast_node> (79)
        on left: 20 21
        on right: 1 21
    function_decl <ast_node> (80)
        on left: 22 23
        on right: 21
    statement_list <ast_node> (81)
        on left: 24 25
        on right: 1 22 23 25 35 36 37 38 39 40 41 42 43 44
    statement <ast_node> (82)
        on left: 26 27 28 29 30 31 32
        on right: 25
    assignment_stmt <ast_node> (83)
        on left: 33 34
        on right: 26
    if_stmt <ast_node> (84)
        on left: 35 36 37 38
        on right: 27
    elsif_list <ast_node> (85)
        on left: 39 40
        on right: 37 38 40
    while_stmt <ast_node> (86)
        on left: 41
        on right: 28
    for_stmt <ast_node> (87)
        on left: 42 43
        on right: 29
    case_stmt <ast_node> (88)
        on left: 44
        on right: 30
    return_stmt <ast_node> (89)
        on left: 45 46
        on right: 31
    expression <ast_node> (90)
        on left: 47
        on right: 12 14 33 34 35 36 37 38 39 40 41 42 43 44 46 79 80 81 82
    or_expr <ast_node> (91)
        on left: 48 49
        on right: 47 49
    xor_expr <ast_node> (92)
        on left: 50 51
        on right: 48 49 51
    and_expr <ast_node> (93)
        on left: 52 53
        on right: 50 51 53
    comparison_expr <ast_node> (94)
        on left: 54 55 56 57 58 59 60
        on right: 52 53 55 56 57 58 59 60
    add_expr <ast_node> (95)
        on left: 61 62 63
        on right: 54 55 56 57 58 59 60 62 63
    mult_expr <ast_node> (96)
        on left: 64 65 66 67
        on right: 61 62 63 65 66 67
    unary_expr <ast_node> (97)
        on left: 68 69 70
        on right: 64 65 66 67 69 70
    primary_expr <ast_node> (98)
        on left: 71 72 73 74 75 76 77 78 79 80
        on right: 68
    argument_list <ast_node> (99)
        on left: 81 82
        on right: 77 82


State 0

    0 $accept: • program $end

    TOKEN_PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: TOKEN_PROGRAM • TOKEN_IDENTIFIER import_list var_decl_list function_list statement_list TOKEN_END_PROGRAM

    TOKEN_IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: TOKEN_PROGRAM TOKEN_IDENTIFIER • import_list var_decl_list function_list statement_list TOKEN_END_PROGRAM

    $default  reduce using rule 2 (import_list)

    import_list  go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: TOKEN_PROGRAM TOKEN_IDENTIFIER import_list • var_decl_list function_list statement_list TOKEN_END_PROGRAM
    3 import_list: import_list • import_decl

    TOKEN_IMPORT  shift, and go to state 6

    $default  reduce using rule 6 (var_decl_list)

    import_decl    go to state 7
    var_decl_list  go to state 8


State 6

    4 import_decl: TOKEN_IMPORT • TOKEN_STRING_LITERAL TOKEN_SEMICOLON
    5            | TOKEN_IMPORT • TOKEN_STRING_LITERAL TOKEN_AS TOKEN_IDENTIFIER TOKEN_SEMICOLON

    TOKEN_STRING_LITERAL  shift, and go to state 9


State 7

    3 import_list: import_list import_decl •

    $default  reduce using rule 3 (import_list)


State 8

    1 program: TOKEN_PROGRAM TOKEN_IDENTIFIER import_list var_decl_list • function_list statement_list TOKEN_END_PROGRAM
    7 var_decl_list: var_decl_list • var_decl

    TOKEN_VAR         shift, and go to state 10
    TOKEN_VAR_INPUT   shift, and go to state 11
    TOKEN_VAR_OUTPUT  shift, and go to state 12

    $default  reduce using rule 20 (function_list)

    var_decl       go to state 13
    function_list  go to state 14


State 9

    4 import_decl: TOKEN_IMPORT TOKEN_STRING_LITERAL • TOKEN_SEMICOLON
    5            | TOKEN_IMPORT TOKEN_STRING_LITERAL • TOKEN_AS TOKEN_IDENTIFIER TOKEN_SEMICOLON

    TOKEN_AS         shift, and go to state 15
    TOKEN_SEMICOLON  shift, and go to state 16


State 10

    8 var_decl: TOKEN_VAR • var_decl_item TOKEN_END_VAR

    TOKEN_IDENTIFIER  shift, and go to state 17

    var_decl_item  go to state 18


State 11

    9 var_decl: TOKEN_VAR_INPUT • var_decl_item TOKEN_END_VAR

    TOKEN_IDENTIFIER  shift, and go to state 17

    var_decl_item  go to state 19


State 12

   10 var_decl: TOKEN_VAR_OUTPUT • var_decl_item TOKEN_END_VAR

    TOKEN_IDENTIFIER  shift, and go to state 17

    var_decl_item  go to state 20


State 13

    7 var_decl_list: var_decl_list var_decl •

    $default  reduce using rule 7 (var_decl_list)


State 14

    1 program: TOKEN_PROGRAM TOKEN_IDENTIFIER import_list var_decl_list function_list • statement_list TOKEN_END_PROGRAM
   21 function_list: function_list • function_decl

    TOKEN_FUNCTION  shift, and go to state 21

    $default  reduce using rule 24 (statement_list)

    function_decl   go to state 22
    statement_list  go to state 23


State 15

    5 import_decl: TOKEN_IMPORT TOKEN_STRING_LITERAL TOKEN_AS • TOKEN_IDENTIFIER TOKEN_SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 24


State 16

    4 import_decl: TOKEN_IMPORT TOKEN_STRING_LITERAL TOKEN_SEMICOLON •

    $default  reduce using rule 4 (import_decl)


State 17
